--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,22 @@ python-multipart = "^0.0.5"
 PyJWT = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^6.2.5"
+autopep8 = "^1.5.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.autopep8]
+max_line_length = 120
+in-place = true
+recursive = true
+aggressive = 3
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "--disable-warnings -v"
+testpaths = [
+    "tests"
+]
