--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ mongoengine = "^0.23.1"
 python-multipart = "^0.0.5"
 PyJWT = "^2.1.0"
 aiofiles = "^0.7.0"
+requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
