--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "documents-storage-api"
-version = "0.1.0"
-description = ""
+version = "0.2.0"
+description = "API for documents-storage app"
 authors = ["Tafeen <taafeenn@gmail.com>"]
 
 [tool.poetry.dependencies]
