--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "documents-storage-api"
-version = "0.8.0"
+version = "0.8.1"
 description = "API for documents-storage app"
 authors = ["Tafeen <taafeenn@gmail.com>"]
 
@@ -15,6 +15,7 @@ python-multipart = "^0.0.5"
 PyJWT = "^2.1.0"
 aiofiles = "^0.7.0"
 requests = "^2.26.0"
+single-source = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
