Added HOST_IP to be able to download exported files from remote host

--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,7 @@
 PYTHONPATH=documents_storage_api
 DEBUG=True
 DB_URL=mongodb://127.0.0.1:27017/documents-storage
+HOST_IP=127.0.0.1
 API_HOST=127.0.0.1
 API_PORT=8000
 API_ORIGINS=["http://localhost:5000", "http://localhost:8000"]
