--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -19,6 +19,7 @@ jobs:
       run: |
         pip install -r ./requirements.txt
         pip install coverage
+        pip install pytest
         export PYTHONPATH=documents_storage_api
         coverage run --source routers -m pytest
     - name: Upload Coverage to Codecov
