--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -21,6 +21,14 @@ jobs:
         pip install coverage
         pip install pytest
         export PYTHONPATH=documents_storage_api
+        printf "PYTHONPATH=documents_storage_api \n \
+        DEBUG=True \n \
+        DB_URL=mongodb://mongo-ds-test:27017/documents-storage \n \
+        HOST_IP=127.0.0.1 \n \
+        API_HOST=127.0.0.1 \n \
+        API_PORT=8000 \n \
+        API_ORIGINS=['http://localhost:5000', 'http://localhost:8000'] \n \
+        API_JWT_SECRET='test_secret'" > .env
         coverage run --source routers -m pytest
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v2
