--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -15,6 +15,10 @@ jobs:
       uses: actions/setup-python@master
       with:
         python-version: 3.7
+
+    - name: Setup MongoDB
+      uses: supercharge/mongodb-github-action@1.7.0
+
     - name: Generate Report
       run: |
         pip install -r ./requirements.txt
