--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -27,7 +27,7 @@ jobs:
         export PYTHONPATH=documents_storage_api
         printf "PYTHONPATH=documents_storage_api \n \
         DEBUG=True \n \
-        DB_URL=mongodb://mongo-ds-test:27017/documents-storage \n \
+        DB_URL=mongodb://127.0.0.1:27017/documents-storage \n \
         HOST_IP=127.0.0.1 \n \
         API_HOST=127.0.0.1 \n \
         API_PORT=8000 \n \
