--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ PyJWT = "^2.1.0"
 aiofiles = "^0.7.0"
 requests = "^2.26.0"
 single-source = "^0.2.0"
+coverage = "^6.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
