Removed exit in github action - config_sec

--- a/.github/workflows/code_cov_sec.yml
+++ b/.github/workflows/code_cov_sec.yml
@@ -67,6 +67,7 @@ jobs:
         uses: checkmarx/kics-github-action@v1.5
         with:
           path: './'
+          ignore_on_exit: results
           output_path: results-dir
           output_formats: 'sarif'
       - name: Show results
