--- a/.github/workflows/code_cov_sec.yml
+++ b/.github/workflows/code_cov_sec.yml
@@ -53,7 +53,7 @@ jobs:
         with:
           args: --sarif-file-output=snyk.code.sarif
       - name: Upload result to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v1
+        uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: snyk.code.sarif
   config_security:
@@ -74,6 +74,6 @@ jobs:
         run: |
           cat results-dir/results.sarif
       - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v1
+        uses: github/codeql-action/upload-sarif@2
         with:
           sarif_file: results-dir/results.sarif
