--- a/.github/workflows/code_cov_sec.yml
+++ b/.github/workflows/code_cov_sec.yml
@@ -74,6 +74,6 @@ jobs:
         run: |
           cat results-dir/results.sarif
       - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@2
+        uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: results-dir/results.sarif
