--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,7 +12,8 @@ services:
     volumes:
       - ${API_DIR}:/usr/src/app/documents-storage-api/data
     networks:
-      - documents_storage
+      - documents_storage_fe
+      - documents_storage_be
 
   documents-storage-ui:
     container_name: documents-storage-ui
@@ -20,6 +21,9 @@ services:
     build: ../../documents-storage-ui
     ports:
       - ${APP_PORT}:5000
+    networks:
+      - documents_storage_fe
+
   mongo-ds:
     container_name: documents-storage-db
     hostname: mongo-ds
@@ -28,7 +32,8 @@ services:
     volumes:
       - ${DB_DIR}:/data/db
     networks:
-      - documents_storage
+      - documents_storage_be
 
 networks:
-  documents_storage:
+  documents_storage_fe:
+  documents_storage_be:
