--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,12 +8,12 @@ services:
       dockerfile: start.dockerfile
     hostname: documents-storage-api
     ports:
-      - ${API_PORT}:${API_PORT}
+      - ${API_PORT}:8000
     volumes:
-      - ${API_DIR}:/usr/src/app/documents-storage-api/data
+      - documents-storage-data/api:/usr/src/app/documents-storage-api/data
     networks:
-      - documents_storage_fe
-      - documents_storage_be
+      - documents-storage-fe
+      - documents-storage-be
 
   documents-storage-ui:
     container_name: documents-storage-ui
@@ -22,7 +22,7 @@ services:
     ports:
       - ${APP_PORT}:5000
     networks:
-      - documents_storage_fe
+      - documents-storage-fe
 
   mongo-ds:
     container_name: documents-storage-db
@@ -30,10 +30,13 @@ services:
     restart: always
     image: mongo
     volumes:
-      - ${DB_DIR}:/data/db
+      - documents-storage-data/db:/data/db
     networks:
-      - documents_storage_be
+      - documents-storage-be
 
 networks:
-  documents_storage_fe:
-  documents_storage_be:
+  documents-storage-fe:
+  documents-storage-be:
+
+volumes:
+  documents-storage-data:
