--- a/.env.prod
+++ b/.env.prod
@@ -1,8 +1,8 @@
 PYTHONPATH=documents_storage_api
 DEBUG=True
-DB_URL=mongodb://127.0.0.1:27017/documents-storage
-HOST_IP=127.0.0.1
-API_HOST=127.0.0.1
+TEST=False
+DB_URL=mongodb://localhost:27017/documents-storage
+HOST_IP=0.0.0.0
+API_HOST=0.0.0.0
 API_PORT=8000
-API_ORIGINS=["http://localhost:5000", "http://localhost:8000"]
-API_JWT_SECRET=test_secret
+API_ORIGINS=["*"]
