--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -4,6 +4,10 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+     - 
+        uses: actions/checkout@v2
+        with:
+        fetch-depth: ‘2’
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
