--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -1,5 +1,8 @@
 name: dockerhub build
-on: push
+on:  
+  push:
+    tags:
+      - '*'
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -27,4 +30,4 @@ jobs:
           context: . 
           file: start.dockerfile
           push: true
-          tags: tafeen/documents-storage-api:latest
+          tags: tafeen/documents-storage-api:${{ github.event.ref }}
