--- a/docker-compose.default.yml
+++ b/docker-compose.default.yml
@@ -5,7 +5,7 @@ services:
     container_name: documents-storage-api
     restart: always
     build:
-      context: ../
+      context: .
       dockerfile: start.dockerfile
     hostname: documents-storage-api
     ports:
@@ -19,7 +19,7 @@ services:
   documents-storage-ui:
     container_name: documents-storage-ui
     restart: always
-    build: ../../documents-storage-ui
+    build: ../documents-storage-ui
     ports:
       - ${UI_PORT}:5000
     networks:
