--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -23,11 +23,14 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      -
+     -  
+        name: Get the tag name
+        run: echo "TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
+      - 
         name: Build and push
         uses: docker/build-push-action@v3
         with:
           context: . 
           file: start.dockerfile
           push: true
-          tags: tafeen/documents-storage-api:${{ github.event.ref }}
+          tags: tafeen/documents-storage-api:${{ env.TAG }}
