--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -10,7 +10,7 @@ jobs:
       - 
         uses: actions/checkout@v2
         with:
-          fetch-depth: ‘2’
+          fetch-depth: '2'
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -27,10 +27,10 @@ jobs:
         name: Get the tag name
         run: echo "TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
       - 
-        name: Build and push
+        name: Build and push version
         uses: docker/build-push-action@v3
         with:
           context: . 
           file: start.dockerfile
           push: true
-          tags: tafeen/documents-storage-api:${{ env.TAG }}
+          tags: tafeen/documents-storage-api:latest,tafeen/documents-storage-api:${{ env.TAG }}
