Updated dockerfile, fixed testing environment

--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -8,11 +8,13 @@ services:
       dockerfile: test.dockerfile
     networks:
       - documents_storage_test
+    volumes:
+      - /usr/src/app/documents-storage-api
 
   documents-storage-db-test:
     container_name: documents-storage-db-test
     hostname: documents-storage-db-test
-    image: mongo:4.0
+    image: mongo:5.0.5
     networks:
       - documents_storage_test
 
